--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <HTML lang="en">
     <HEAD>
-         <TITLE>HBNB</TITLE>
+        <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-        <H1>STATES</H1>
+        <H1>States</H1>
         <UL>
-
-            {% for state in states|sort %}
-            <LI>{{ state[0] }}: <B>{{ state[1] }}</B>
+        {% for state in states.values()|sort(attribute="name") %}
+            <LI>{{ state.id }}: <B>{{ state.name }}</B>
                 <UL>
-
-                   {% for city in state[2]|sort %}
-                   <LI>{{ city[0] }}: <B>{{ city[1] }}</B></LI>
-                   {% endfor %}
-
+                {% for city in state.cities|sort(attribute="name") %}
+                    <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+                {% endfor %}
                 </UL>
             </LI>
-            {% endfor %}
-
+        {% endfor %}
         </UL>
     </BODY>
 </HTML>
