--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,28 +4,23 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-
-        {% if id == None %}
+    {% if state is mapping %}
         <H1>States</H1>
         <UL>
-
-            {% for state in states|sort %}
-            <LI>{{ state[0] }}: <B>{{ state[1] }}</B></LI>
-            {% endfor %}
-
+        {% for s in state.values()|sort(attribute="name") %}
+            <LI>{{ s.id }}: <B>{{ s.name }}</B></LI>
+        {% endfor %}
         </UL>
-        {% else %}
-            {% if state == None %}
-            <H1>Not found!</H1>
-            {% else %}
-            <H1>State: {{ state.name }}</H1>
-            <H3>Cities:</H3>
-            <UL>
-                {% for city in cities|sort %}
-                <LI>{{ city[0] }}: <B>{{ city[1] }}</B></LI>
-                {% endfor %}
-            </UL>
-            {% endif %}
-        {% endif%}
+    {% elif state is defined %}
+        <H1>State: {{ state.name }}</H1>
+        <H3>Cities:</H3>
+        <UL>
+        {% for city in state.cities|sort(attribute="name") %}
+            <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+        {% endfor %}
+        </UL>
+    {% else %}
+        <H1>Not found!</H1>
+    {% endif %}
     </BODY>
 </HTML>
